# ChangeLog for sci-libs/xraylib
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  sci-libs/xraylib: Add github to remote-id in metadata.xml

*xraylib-3.1.0 (03 Apr 2015)

  03 Apr 2015; Marius Brehler <marbre@linux.sungazer.de> +xraylib-3.1.0.ebuild:
  Version bump, fixes Bug 538232

  08 Dec 2013; Justin Lecher <jlec@gentoo.org> xraylib-2.16.0.ebuild:
  Make python stuff optional under USE=python