@@ -23,13 +23,13 @@ IUSE="examples fortran java lua perl python"
 REQUIRED_USE="python? ( ${PYTHON_REQUIRED_USE} )"
 
 RDEPEND="
-	java? ( >=virtual/jre-1.4 )
-	lua? ( dev-lang/lua )
+	java? ( >=virtual/jre-1.4:* )
+	lua? ( dev-lang/lua:0 )
 	perl? ( dev-lang/perl )
 	python? ( ${PYTHON_DEPS} )"
 
 DEPEND="${RDEPEND}
-	java? ( >=virtual/jdk-1.4 )"
+	java? ( >=virtual/jdk-1.4:* )"
 
 S="${WORKDIR}/${PN}-${P}"
 
