@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Jun 2015; Justin Lecher <jlec@gentoo.org> xraylib-2.16.0.ebuild,
+  xraylib-3.1.0.ebuild:
+  sci-libs/xraylib: Add slot operators
+
   05 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
   sci-libs/xraylib: Add github to remote-id in metadata.xml
 
